fix(cards.scss): remove `grid-template-rows` from `.category-cards-grid` to remove excess whitespace below the category cards grid

--- a/src/sass/components/_cards.scss
+++ b/src/sass/components/_cards.scss
@@ -32,7 +32,6 @@
 
     @media(min-width: 48em) {
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(3, 1fr);
     }
 
     @media(min-width: 80em) {
